lab3 added, hangman game not completed yet

--- a/index.html
+++ b/index.html
@@ -21,15 +21,42 @@
     </header>
     <main>
       <h3>hello!</h3>
-      <p>
-        My name is Zaid Nusair, i am 26 years old, i live in Irbid, Jordan. I
-        have a bachelors degree in engineering from JUST. I volunteered in
-        different organization which helped me a lot on both ;a profissional and
-        personal levels. I also did an internship for I am now inrolled in a
-        software development course and possibly changing career paths. Some of
-        my hobbies are; playing guitar, boxing, swimming, reading and
-        binge-watching series.
-      </p>
+      <section>
+        <ul>
+          <li>My name is Zaid Nusair</li>
+          <li>I am 26 years old.</li>
+          <li>I live in Irbid, Jordan.</li>
+          <li>I have a bachelors degree in engineering from JUST.</li>
+          <li>
+            I volunteered in different organization which helped me a lot on
+            both ; profissional and personal levels.
+          </li>
+          <li>I also did an internship for company called JICA.</li>
+          <li>
+            I am curruntly inrolled in a software development course and
+            possibly changing career paths.
+          </li>
+          <li>
+            Some of my hobbies are; playing guitar, boxing, swimming, reading
+            and binge-watching series.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <p>Top 10 places i would like to visit</p>
+        <ol>
+          <li>British Virgin Islands.</li>
+          <li>Santorini.</li>
+          <li>St. Lucia.</li>
+          <li>Prague.</li>
+          <li>Rio de Janeiro.</li>
+          <li>Great Barrier Reef.</li>
+          <li>Costa Rica.</li>
+          <li>Amalfi Coast.</li>
+          <li>Bora Bora.</li>
+          <li>Phuket.</li>
+        </ol>
+      </section>
     </main>
     <script src="js/app.js"></script>
   </body>
